@@ -30,7 +30,7 @@
 	background-color: #eee;
 }
 
-#treecontrol { margin: 1em 0; }
+#treecontrol { margin: 1em 0; display: none; }
 
 .treeview .hover { color: red; cursor: pointer; }
 
