@@ -7,6 +7,7 @@
 * Added prerendered option: If set to true, assumes all hitarea divs and classes already rendered, speeding up initialization for big trees, but more obtrusive
 * Added jquery.treeview.async.js for ajax-lazy-loading trees, see async.html demo
 * Exposed $.fn.treeview.classes for custom classes if necessary
+* Show treecontrol only when JavaScript is enabled
 
 1.3
 ---
